--- a/.github/workflows/ci-docusaurus.yml
+++ b/.github/workflows/ci-docusaurus.yml
@@ -57,7 +57,7 @@ jobs:
                 repo: context.repo.repo,
                 commit_sha: context.sha,
               })
-              const issueNumber = result.data[0].number
+              const issueNumber = result?.data?[0]?.number
               if(issueNumber){
                 await github.rest.issues.createComment({
                   issue_number: issueNumber,
