--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@docusaurus/preset-classic": "3.3.2",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "docusaurus-plugin-dotenv": "^1.0.1",
     "docusaurus-plugin-search-local": "^2.0.1",
+    "firebase": "^9.22.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-firebaseui": "^6.0.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.3.2",
