--- a/.github/workflows/ci-docusaurus.yml
+++ b/.github/workflows/ci-docusaurus.yml
@@ -6,6 +6,12 @@ on:
       - main
 env:
   BRANCH_NAME: ${{ github.ref_name }}
+  FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
+  FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
+  FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+  FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
+  MESSAGING_SENDER_ID: ${{ secrets.MESSAGING_SENDER_ID }}
+  APP_ID: ${{ secrets.APP_ID }}
 permissions:
   pull-requests: write
 
