--- a/.github/workflows/deploy-docusaurus.yml
+++ b/.github/workflows/deploy-docusaurus.yml
@@ -3,9 +3,18 @@ name: deploy-docusaurus
 on:
   push:
     branches: [main]
-
+  
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  
+env:
+  BRANCH_NAME: ${{ github.ref_name }}
+  FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
+  FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
+  FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+  FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
+  MESSAGING_SENDER_ID: ${{ secrets.MESSAGING_SENDER_ID }}
+  APP_ID: ${{ secrets.APP_ID }}
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -20,11 +29,30 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "18"
+          
+      # Install Netlify
+      - name: Install Netlify
+        run: npm install netlify-cli@17.10.1 -g
+        
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v2.0
+        with:
+          envkey_FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
+          envkey_FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
+          envkey_FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+          envkey_FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
+          envkey_MESSAGING_SENDER_ID: ${{ secrets.MESSAGING_SENDER_ID }}
+          
+      # Netlify import env
+      - name: Netlify import env
+        run: netlify env:import .env --replace-existing
+        
       # Install and build Docusaurus website
       - name: Build Docusaurus website
         run: |
           npm install
           npm run build
+          
       - name: Deploy to GitHub Pages
         if: success()
         uses: crazy-max/ghaction-github-pages@v2
