--- a/.github/workflows/deploy-docusaurus.yml
+++ b/.github/workflows/deploy-docusaurus.yml
@@ -45,7 +45,7 @@ jobs:
           
       # Netlify import env
       - name: Netlify import env
-        run: netlify env:import .env --replace-existing
+        run: netlify env:import .env --site ${{ secrets.NETLIFY_SITE_ID }} --replace-existing --context production
         
       # Install and build Docusaurus website
       - name: Build Docusaurus website
