--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@docusaurus/module-type-aliases": "3.3.2",
     "@docusaurus/types": "3.3.2"
   },
+  "peerDependencies": {
+    "react": "^18.0.0"
+  },
   "browserslist": {
     "production": [
       ">0.5%",
