--- a/.github/workflows/deploy-docusaurus.yml
+++ b/.github/workflows/deploy-docusaurus.yml
@@ -3,10 +3,10 @@ name: deploy-docusaurus
 on:
   push:
     branches: [main]
-  
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-  
+
 env:
   BRANCH_NAME: ${{ github.ref_name }}
   FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
@@ -29,11 +29,11 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "18"
-          
+
       # Install Netlify
       - name: Install Netlify
-        run: npm install netlify-cli@17.10.1 -g
-        
+        run: yarn add netlify-cli@17.10.1 -g
+
       - name: Make envfile
         uses: SpicyPizza/create-envfile@v2.0
         with:
@@ -42,7 +42,7 @@ jobs:
           envkey_FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
           envkey_FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
           envkey_MESSAGING_SENDER_ID: ${{ secrets.MESSAGING_SENDER_ID }}
-          
+
       # Netlify import env
       - name: Netlify import env
         run: |
@@ -52,12 +52,12 @@ jobs:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
       # Install and build Docusaurus website
-      
+
       - name: Build Docusaurus website
         run: |
-          npm install
-          npm run build
-          
+          yarn install
+          yarn build
+
       - name: Deploy to GitHub Pages
         if: success()
         uses: crazy-max/ghaction-github-pages@v2
