--- a/package.json
+++ b/package.json
@@ -16,20 +16,28 @@
   },
   "dependencies": {
     "@docusaurus/core": "3.3.2",
+    "@docusaurus/plugin-ideal-image": "3.3.2",
     "@docusaurus/preset-classic": "3.3.2",
     "@mdx-js/react": "^3.0.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "docusaurus-plugin-dotenv": "^1.0.1",
+    "docusaurus-plugin-sass": "^0.2.5",
     "docusaurus-plugin-search-local": "^2.0.1",
     "firebase": "^9.22.0",
+    "lottie-web": "^5.12.2",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-firebaseui": "^6.0.0"
+    "react-firebaseui": "^6.0.0",
+    "sass": "^1.77.4",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.3.2",
-    "@docusaurus/types": "3.3.2"
+    "@docusaurus/types": "3.3.2",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   },
   "peerDependencies": {
     "react": "^18.0.0"
