--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: github
   branch: main
-  repo: <your-github>/my-website
+  repo: yenmai477/yenmai477.github.io
 
 # These lines should *not* be indented
 media_folder: "static/img" # Media files will be stored in the repo under static/images/uploads
