--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -22,6 +22,7 @@ collections:
       preview: false
     nested:
       depth: 20 # max depth to show in the collection tree
+      summary: "{{title}}" # optional summary for a tree node, defaults to the inferred title field
     fields:
       # - name: 'menu'
       #   label: 'Menu'
@@ -73,6 +74,7 @@ collections:
       preview: false
     nested:
       depth: 20 # max depth to show in the collection tree
+      summary: "{{title}}" # optional summary for a tree node, defaults to the inferred title field
     fields:
       - { label: "Slug", name: "id", widget: "string" }
       - { label: "Title", name: "title", widget: "string" }
