Correct default value

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -63,7 +63,7 @@ collections:
           label: "Keywords",
           name: "keywords",
           widget: "list",
-          default: undefined,
+          default: [docs],
           required: false,
         }
       - { label: "Description", name: "description", required: false }
