--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -22,7 +22,7 @@ collections:
     folder: "docs"
     path: "{{menu}}/{{id}}"
     create: true
-    slug: "{{id}}"
+    slug: "{{title}}"
     identifier_field: "title"
     extension: "md"
     format: "frontmatter"
