Should have sidebar label

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -53,12 +53,7 @@ collections:
           required: false,
           default: false,
         }
-      - {
-          label: "Sidebar Label",
-          name: "sidebar_label",
-          widget: "string",
-          required: false,
-        }
+      - { label: "Sidebar Label", name: "sidebar_label", widget: "string" }
       - {
           label: "Keywords",
           name: "keywords",
