--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -20,7 +20,7 @@ collections:
     label: "Docs"
     label_singular: "Doc"
     folder: "docs"
-    path: "{{menu}}/{{id}}"
+    # path: "{{menu}}/{{id}}"
     create: true
     slug: "{{title}}"
     identifier_field: "title"
